icon and spacing issue

--- a/src/containers/myAccount/components/TransactionDashboard/FilterDropdown/styles.scss
+++ b/src/containers/myAccount/components/TransactionDashboard/FilterDropdown/styles.scss
@@ -71,8 +71,8 @@
                 max-height: 0;
             }
             li{
-                height: $secondary-header-height;
-                line-height: $secondary-header-height;
+                height: $filter-dropdown-ul-li; 
+                line-height: $filter-dropdown-ul-li;
                 background: $white;
                 padding: 0 20px;
                 @include b4_12px_montserrat_light_charcoal();
@@ -139,7 +139,7 @@
                     }
                     button{
                         width: 50% !important;
-                        // height: 50px;
+                        height:unset;
                     }
                     // .cnl-btn{
                     //     background-color: $white;
